--- a/apk/res/values-fa/strings.xml
+++ b/apk/res/values-fa/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> درخواست دسترسی به «<xliff:g id="DATA_TYPES">%2$s</xliff:g>» را دارد.\n\nمجاز کردن همه را انتخاب کنید یا آن‌ها را به‌صورت مجزا کنترل کنید."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"به <xliff:g id="APP_NAME">%1$s</xliff:g> اجازه دسترسی به <xliff:g id="DATA_TYPE">%2$s</xliff:g> داده شود؟"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"تناسب اندام و تندرستی"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"همیشه"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"درحین استفاده"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"همیشه"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"درحین استفاده"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"«‫<xliff:g id="APP_NAME">%1$s</xliff:g>» می‌تواند <xliff:g id="ALLOW_MODE">%2$s</xliff:g> به همه داده‌های تناسب اندام و سلامتی شما دسترسی داشته باشد"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"مجاز به دسترسی داشتن"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"مجاز به خواندن"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"با این اجازه‌ها «<xliff:g id="APP_NAME">%1$s</xliff:g>» می‌تواند به داده‌ها از حسگرهای دستگاهتان دسترسی داشته باشد."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"دسترسی به <xliff:g id="DATA_TYPE">%s</xliff:g> برای همه برنامه‌های روی ساعت برداشته شود؟"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"علامت تأیید"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"علامت ضربدر"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"درحال‌حاضر <xliff:g id="APP_NAME">%1$s</xliff:g> می‌تواند <xliff:g id="ALLOW_MODE">%2$s</xliff:g> به داده‌های تناسب اندام و تندرستی دسترسی داشته باشد"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"به <xliff:g id="APP_NAME">%1$s</xliff:g> اجازه می‌دهید همیشه به داده‌های تناسب اندام و تندرستی دسترسی داشته باشد؟"</string>
     <string name="current_access" msgid="1457167070428176139">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> به <xliff:g id="DATA_TYPES">%2$s</xliff:g> دسترسی دارد."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"مدیریت اجازه‌های تناسب اندام و تندرستی"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{‫۱ برنامه از آن استفاده کرده است}one{‫# برنامه از آن استفاده کرده است}other{‫# برنامه از آن استفاده کرده است}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"در ۲۴ ساعت گذشته استفاده نشده است"</string>
+    <string name="accessed" msgid="4424701457530587176">"آخرین دسترسی: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
