--- a/apk/res/values-b+sr+Latn/strings.xml
+++ b/apk/res/values-b+sr+Latn/strings.xml
@@ -541,7 +541,7 @@
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"Nema dostupnih aplikacija. Instalirajte aplikacije za prostor u klaudu da biste ih videli ovde"</string>
     <string name="export_import_install_apps_text" msgid="5026922993254770904">"Ako želite dodatne opcije, instalirajte aplikacije za prostor u klaudu da biste ih videli ovde"</string>
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Idi u Play prodavnicu"</string>
-    <string name="onboarding_title" msgid="8550656211291180188">"Započnite sa Povezivanjem zdravlja"</string>
+    <string name="onboarding_title" msgid="8550656211291180188">"Započnite sa Pove­­­U+00ADzivanjem zdravlja"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Povezivanje zdravlja čuva vaše podatke o zdravlju i fitnesu i pruža vam jednostavan način da sinhronizujete različite aplikacije na uređaju"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Povezivanje zdravlja čuva i sinhronizuje podatke o zdravlju i fitnesu iz različitih aplikacija.\n\n"<b>"Podaci o fitnesu i zdravlju,"</b>" uključujući sesije vežbanja, broj koraka, ishranu, spavanje i drugo\n\n"<b>"Zdravstvena evidencija,"</b>" uključujući vakcinacije, laboratorijske rezultate i drugo"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Pomoću Povezivanja zdravlja:"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> traži pristup za: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nIzaberite da li želite da dozvolite sve ili da ih kontrolišete pojedinačno."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Dozvoljavate da <xliff:g id="APP_NAME">%1$s</xliff:g> pristupa podacima: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitnes i velnes"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sve vreme"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"dok se koristi"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sve vreme"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Dok se koristi"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> može da pristupa svim podacima o fitnesu i velnesu u režimu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Dozvoljen pristup"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Dozvoljeno čitanje"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Ove dozvole daju aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> pristup podacima sa senzora uređaja."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Želite da uklonite pristup podacima (<xliff:g id="DATA_TYPE">%s</xliff:g>) svim aplikacijama na satu?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Znak potvrde"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Znak x"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Trenutno, <xliff:g id="APP_NAME">%1$s</xliff:g> može da pristupa podacima o fitnesu i velnesu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Želite da dozvolite da <xliff:g id="APP_NAME">%1$s</xliff:g> stalno pristupa podacima o fitnesu i velnesu?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ima pristup za: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Upravljaj dozvolama za fitnes i velnes"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Koristi 1 aplikacija}one{Koristi # aplikacija}few{Koriste # aplikacije}other{Koristi # aplikacija}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Nije korišćeno u poslednja 24 sata"</string>
+    <string name="accessed" msgid="4424701457530587176">"Pristupljeno: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
