--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" запытвае доступ да наступных даных: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nВы можаце даць усе дазволы ці кіраваць дазволамі паасобку."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Дазволіць праграме \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" доступ да наступных даных: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Фітнес і здароўе"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"заўсёды"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"падчас выкарыстання"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Заўсёды"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Падчас выкарыстання"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"Праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" можа атрымліваць доступ да даных пра фітнес і здароўе <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Доступ дазволены"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Дазволена счытваць"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"З гэтымі дазволамі праграма \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" можа атрымліваць доступ да даных з датчыкаў прылады."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Забараніць усім праграмам доступ да даных \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" на гадзінніку?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Птушка"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крыжык"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"На гэты момант <xliff:g id="APP_NAME">%1$s</xliff:g> мае доступ да даных пра фізічную актыўнасць і фізічны стан <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Дазволіць праграме \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" пастаянны доступ да даных пра фізічную актыўнасць і фізічны стан?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> мае доступ да наступнай інфармацыі: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Дазволы на кіраванне данымі пра фізічную актыўнасць і фізічны стан"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Выкарыстоўваўся 1 праграмай}one{Выкарыстоўваўся # праграмай}few{Выкарыстоўваўся # праграмамі}many{Выкарыстоўваўся # праграмамі}other{Выкарыстоўваўся # праграмы}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"За апошнія 24 гадзіны дазвол не выкарыстоўваўся"</string>
+    <string name="accessed" msgid="4424701457530587176">"Апошні доступ: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
