--- a/apk/res/values-bs/strings.xml
+++ b/apk/res/values-bs/strings.xml
@@ -543,7 +543,7 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Idite u Play trgovinu"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Počnite koristiti Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect pohranjuje vaše podatke o zdravlju i fitnesu i pruža vam jednostavan način da sinhronizirate različite aplikacije na uređaju"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect pohranjuje i sinhronizira vaše podatke o zdravlju i fitnesu iz raznih aplikacija.\n\n"<b>"Podaci o fitnesu i wellnessu,"</b>" uključujući sesije vježbanja, korake, prehranu, spavanje i druge \n\n"<b>"zdravstvene evidencije,"</b>" uključujući vakcine, laboratorijske nalaze i drugo"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"Health Connect pohranjuje i sinhronizira vaše podatke o zdravlju i fitnesu iz raznih aplikacija.\n\n"<b>"Podaci o fitnesu i wellnessu,"</b>" uključujući sesije vježbanja, korake, prehranu, spavanje i drugo \n\n"<b>"Zdravstvene evidencije,"</b>" uključujući vakcine, laboratorijske nalaze i drugo"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Uz Health Connect možete raditi sljedeće"</string>
     <string name="share_data_text" msgid="6898398345784931678"><b>"Dijelite podatke s aplikacijama"</b>\n"Odaberite podatke koje svaka aplikacija može čitati ili zapisivati u Health Connectu"</string>
     <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Upravljajte postavkama i privatnošću"</b>\n"Promijenite odobrenja za aplikaciju i upravljajte podacima bilo kada"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> traži pristup podacima vrste <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nOdaberite želite li dozvoliti sve ili upravljati njima pojedinačno."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Dozvoliti aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> da pristupa podacima vrste <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitnes i wellness"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sve vrijeme"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"tokom upotrebe"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sve vrijeme"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Tokom upotrebe"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> može pristupati svim vašim podacima o fitnesu i wellnessu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Dozvoljen pristup"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Dozvoljeno čitanje"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Ova odobrenja daju aplikaciji <xliff:g id="APP_NAME">%1$s</xliff:g> pristup podacima sa senzora uređaja."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Ukloniti pristup podacima vrste \"<xliff:g id="DATA_TYPE">%s</xliff:g>\" za sve aplikacije na satu?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Kvačica"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Znak prekriženo"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> trenutno može pristupati podacima o fitnesu i wellnessu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Dozvoliti da <xliff:g id="APP_NAME">%1$s</xliff:g> pristupa podacima o fitnesu i wellnessu sve vrijeme?"</string>
     <string name="current_access" msgid="1457167070428176139">"Aplikacija <xliff:g id="APP_NAME">%1$s</xliff:g> ima pristup podacima vrste <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Upravljajte odobrenjima za fitnes i wellness"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Koristi ga 1 aplikacija}one{Koristi ga # aplikacija}few{Koriste ga # aplikacije}other{Koristi ga # aplikacija}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Nije korišteno u posljednja 24 sata"</string>
+    <string name="accessed" msgid="4424701457530587176">"Pristupljeno: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
