--- a/apk/res/values-cs/strings.xml
+++ b/apk/res/values-cs/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> požaduje přístup k těmto datům: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nPovolte vše, nebo přístup nastavte jednotlivě."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Povolit aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g> přístup k těmto datům: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness a wellness"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"neustále"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"při používání"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Neustále"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Při používání"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> má přístup ke všem vašim údajům o zdraví a wellness <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Přístup povolen"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Smí číst"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Tato oprávnění dávají aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g> přístup k datům ze senzorů vašeho zařízení."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Odebrat všem aplikacím v hodinkách přístup k datům typu <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Značka zaškrtnutí"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Křížek"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> má přístup ke všem vašim datům o fitness a wellness v režimu <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Povolit aplikaci <xliff:g id="APP_NAME">%1$s</xliff:g> neustálý přístup k datům o fitness a wellness?"</string>
     <string name="current_access" msgid="1457167070428176139">"Aplikace <xliff:g id="APP_NAME">%1$s</xliff:g> má přístup k těmto datům: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Spravovat oprávnění pro fitness a wellness"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
