--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -1171,11 +1171,10 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> is requesting access to <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nChoose to allow all or control them individually."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> to access <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness and wellness"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"all the time"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"while in use"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"All the time"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"While in use"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> can access all of your fitness and wellness data <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="view_permissions_description_all_the_time" msgid="3434945199164069475">"<xliff:g id="APP_NAME">%1$s</xliff:g> can access all of your fitness and wellness data all the time"</string>
+    <string name="view_permissions_description_while_in_use" msgid="507698943902581557">"<xliff:g id="APP_NAME">%1$s</xliff:g> can access all of your fitness and wellness data while in use"</string>
     <string name="allowed_to_access" msgid="4179317387300812335">"Allowed to access"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Allowed to read"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"These permissions give <xliff:g id="APP_NAME">%1$s</xliff:g> access to data from your device sensors."</string>
@@ -1187,8 +1186,12 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Remove <xliff:g id="DATA_TYPE">%s</xliff:g> access for all apps on your watch?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Check mark"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Cross mark"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Currently, <xliff:g id="APP_NAME">%1$s</xliff:g> can access fitness and wellness data <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <string name="current_allow_mode_all_the_time" msgid="3329625277933258855">"Currently, <xliff:g id="APP_NAME">%1$s</xliff:g> can access fitness and wellness data all the time"</string>
+    <string name="current_allow_mode_while_in_use" msgid="6358053330935305061">"Currently, <xliff:g id="APP_NAME">%1$s</xliff:g> can access fitness and wellness data while in use"</string>
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Allow <xliff:g id="APP_NAME">%1$s</xliff:g> access to fitness and wellness data all the time?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> has access to <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Manage fitness and wellness permissions"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Used by 1 app}other{Used by # apps}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Not used in past 24 hours"</string>
+    <string name="accessed" msgid="4424701457530587176">"Accessed <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
