--- a/apk/res/values-es-rUS/strings.xml
+++ b/apk/res/values-es-rUS/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> solicitó acceso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nElige si quieres dar todos los permisos o controlarlos individualmente."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Actividad física y bienestar"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"todo el tiempo"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"mientras está en uso"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Todo el tiempo"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Mientras está en uso"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> puede acceder a todos tus datos de actividad física y bienestar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Se permite el acceso"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Permisos de lectura"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Estos permisos le otorgan a <xliff:g id="APP_NAME">%1$s</xliff:g> acceso a los datos de los sensores de tu dispositivo."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"¿Quieres quitar el acceso a <xliff:g id="DATA_TYPE">%s</xliff:g> para todas las apps de tu reloj?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de verificación"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Marca de tachado"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Actualmente, <xliff:g id="APP_NAME">%1$s</xliff:g> puede acceder a los datos de actividad física y bienestar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"¿Quieres permitir que <xliff:g id="APP_NAME">%1$s</xliff:g> acceda a los datos de actividad física y bienestar todo el tiempo?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> tiene acceso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Administrar permisos de salud y bienestar"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{En uso por parte de 1 app}other{En uso por parte de # apps}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Sin uso en las últimas 24 horas"</string>
+    <string name="accessed" msgid="4424701457530587176">"Último acceso: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
