--- a/apk/res/values-et/strings.xml
+++ b/apk/res/values-et/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> taotleb juurdepääsu järgmisele: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nValige, kas lubada kõik või juhtida neid ükshaaval."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Kas lubada rakendusele <xliff:g id="APP_NAME">%1$s</xliff:g> juurdepääs andmetüübile <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Vormisolek ja heaolu"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"kogu aeg"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"kasutamise ajal"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Kogu aeg"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Kasutamise ajal"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> pääseb juurde kõikidele teie vormisoleku ja heaolu andmetele <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Lubatud juurde pääseda"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Lubatud lugeda"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Need load annavad rakendusele <xliff:g id="APP_NAME">%1$s</xliff:g> juurdepääsu teie seadme andurite andmetele."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Kas eemaldada kõigi kellas olevate rakenduste juurdepääs andmetüübile <xliff:g id="DATA_TYPE">%s</xliff:g>?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Märge"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Rist"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Praegu pääseb <xliff:g id="APP_NAME">%1$s</xliff:g> juurde kõikidele teie treeningu- ja heaoluandmetele <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Kas lubada rakendusele <xliff:g id="APP_NAME">%1$s</xliff:g> kogu aeg juurdepääs treeningu- ja heaoluandmetele?"</string>
     <string name="current_access" msgid="1457167070428176139">"Rakendusel <xliff:g id="APP_NAME">%1$s</xliff:g> on juurdepääs andmetele <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Treeningu ja heaoluga seotud lubade haldamine"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Kasutab 1 rakendus}other{Kasutavad # rakendust}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Pole viimase 24 tunni jooksul kasutatud"</string>
+    <string name="accessed" msgid="4424701457530587176">"Juurde pääsetud <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
