--- a/apk/res/values-fr-rCA/strings.xml
+++ b/apk/res/values-fr-rCA/strings.xml
@@ -44,7 +44,7 @@
     <string name="set_units_title" msgid="2657822539603758029">"Configurer les unités"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"Préférences"</string>
     <string name="manage_data_category_title" msgid="6328886061582616519">"Gérer les données"</string>
-    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Exporter et importer les données"</string>
+    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Exportez et importez les données"</string>
     <string name="recent_access_header" msgid="7623497371790225888">"Accès récents"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"Aucune appli n\'a accédé à Connexion santé dernièrement"</string>
     <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"Afficher les accès récents"</string>
@@ -545,7 +545,7 @@
     <string name="onboarding_description" msgid="3479157507808350452">"Connexion santé stocke vos données de santé et d\'activité physique, et vous offre un moyen simple de synchroniser les différentes applis de votre appareil"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Connexion santé stocke et synchronise vos données relatives à la santé et à l\'activité physique à partir de différentes applis.\n\n"<b>"Les données relatives à l\'activité physique et au bien-être,"</b>" y compris les séances d\'exercice, le nombre de pas, la nutrition, le sommeil et d\'autres données\n\n"<b>"Les dossiers médicaux,"</b>" y compris les vaccins, les résultats de laboratoire et d\'autres données"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Avec Connexion santé vous pouvez"</string>
-    <string name="share_data_text" msgid="6898398345784931678"><b>"Partagez des données avec vos applis"</b>\n"Choisissez les données que chaque appli peut consulter ou modifier dans Connexion santé"</string>
+    <string name="share_data_text" msgid="6898398345784931678"><b>"Partager des données avec vos applis"</b>\n"Choisissez les données que chaque appli peut consulter ou modifier dans Connexion santé"</string>
     <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Gérez vos paramètres et votre confidentialité"</b>\n"Modifiez les autorisations des applis et gérez vos données en tout temps"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Retour"</string>
     <string name="onboarding_get_started_button_text" msgid="2348061971090731336">"Faire vos premiers pas"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> demande l\'accès aux données suivantes : <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nChoisissez de les autoriser toutes ou de les contrôler individuellement."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à accéder à <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Mise en forme et bien-être"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"en tout temps"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"durant l\'utilisation"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"En tout temps"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Durant l\'utilisation"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> peut accéder à toutes vos données d\'activité physique et de bien-être <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Autorisée à accéder"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Autorisée à lire"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Ces autorisations permettent à <xliff:g id="APP_NAME">%1$s</xliff:g> d\'accéder aux données des capteurs de votre appareil."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Retirer l\'accès à <xliff:g id="DATA_TYPE">%s</xliff:g> pour toutes les applis sur votre montre?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Coche"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Croix"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Actuellement, <xliff:g id="APP_NAME">%1$s</xliff:g> peut accéder aux données d\'activité physique et de bien-être <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Autoriser <xliff:g id="APP_NAME">%1$s</xliff:g> à accéder à tout moment aux données d\'activité physique et de bien-être?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> a accès aux données suivantes : <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gérer les autorisations d\'activité physique et de bien-être"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
