--- a/apk/res/values-gu/strings.xml
+++ b/apk/res/values-gu/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> તમારા <xliff:g id="DATA_TYPES">%2$s</xliff:g>ના ઍક્સેસની વિનંતી કરી રહી છે.\n\nમંજૂરી આપવા માટે બધી પરવાનગીઓને પસંદ કરો અથવા તેમને અલગ-અલગ મેનેજ કરો."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g>ના ઍક્સેસ માટે <xliff:g id="APP_NAME">%1$s</xliff:g>ને મંજૂરી આપીએ?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"ફિટનેસ અને સુખાકારી"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"હંમેશાં"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ઉપયોગ કરતી વખતે"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"હંમેશાં"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ઉપયોગ કરતી વખતે"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>, તમારા આરોગ્ય અને સુખાકારી સંબંધિત સંપૂર્ણ ડેટાને <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ઍક્સેસ કરી શકે છે"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"ઍક્સેસ કરવાની મંજૂરી છે"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"વાંચવાની મંજૂરી છે"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"આ પરવાનગીઓ <xliff:g id="APP_NAME">%1$s</xliff:g>ને તમારા ડિવાઇસ સેન્સરમાંના ડેટાનો ઍક્સેસ આપે છે."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"તમારી વૉચ પર બધી ઍપ માટે <xliff:g id="DATA_TYPE">%s</xliff:g>નો ઍક્સેસ કાઢી નાખીએ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"ચેક માર્ક"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ક્રૉસ માર્ક"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"હાલમાં, <xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="ALLOW_MODE">%2$s</xliff:g> માટે ફિટનેસ અને સુખાકારીના ડેટાને ઍક્સેસ કરી શકે છે"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g>ને હંમેશાં માટે ફિટનેસ અને સુખાકારી સંબંધિત ડેટાના ઍક્સેસની મંજૂરી આપીએ?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g>ને <xliff:g id="DATA_TYPES">%2$s</xliff:g>નો ઍક્સેસ છે."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ફિટનેસ અને સુખાકારીની પરવાનગીઓ મેનેજ કરો"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{1 ઍપ દ્વારા ઉપયોગ કરવામાં આવ્યો}one{# ઍપ દ્વારા ઉપયોગ કરવામાં આવ્યો}other{# ઍપ દ્વારા ઉપયોગ કરવામાં આવ્યો}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"છેલ્લા 24 કલાકમાં ઉપયોગ કરવામાં આવ્યો નથી"</string>
+    <string name="accessed" msgid="4424701457530587176">"છેલ્લે <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g> વાગ્યે ઍક્સેસ કરી"</string>
 </resources>
