--- a/apk/res/values-it/strings.xml
+++ b/apk/res/values-it/strings.xml
@@ -426,7 +426,7 @@
     <string name="manage_permissions_write_header" msgid="6876806848658168370">"Autorizzazioni di scrittura"</string>
     <string name="no_apps_allowed" msgid="5794833581324128108">"Nessuna app autorizzata"</string>
     <string name="no_apps_denied" msgid="743327680286446017">"Nessuna app non autorizzata"</string>
-    <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"Vuoi rimuovere l\'accesso per tutte le app?"</string>
+    <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"Rimuovere l\'accesso per tutte le app?"</string>
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Nessuna delle tue app potrà accedere o aggiungere nuovi dati a Connessione Salute. I dati esistenti non vengono eliminati.\n\nQuesto non influisce su altre autorizzazioni di cui questa app potrebbe disporre, come posizione, fotocamera o microfono."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Rimuovi tutto"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Gestisci l\'app"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> richiede l\'accesso a <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nScegli se consentire l\'accesso a tutti i tipi di dati o controllarli singolarmente."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Consentire all\'app <xliff:g id="APP_NAME">%1$s</xliff:g> di accedere a <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness e benessere"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"sempre"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"durante l\'uso"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Sempre"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Durante l\'uso"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> può accedere a tutti i tuoi dati relativi a benessere e attività fisica <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Autorizzazioni di accesso"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Autorizzazioni di lettura"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Queste autorizzazioni consentono a <xliff:g id="APP_NAME">%1$s</xliff:g> di accedere ai dati dei sensori del tuo dispositivo."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Rimuovere l\'accesso a <xliff:g id="DATA_TYPE">%s</xliff:g> per tutte le app sull\'orologio?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Segno di spunta"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Croce"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Al momento, <xliff:g id="APP_NAME">%1$s</xliff:g> può accedere ai dati relativi a benessere e attività fisica <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Consentire all\'app <xliff:g id="APP_NAME">%1$s</xliff:g> di accedere sempre ai dati relativi a benessere e attività fisica?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ha accesso a: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gestisci le autorizzazioni per fitness e benessere"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Utilizzata da 1 app}other{Utilizzata da # app}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Autorizzazione non utilizzata nelle ultime 24 ore"</string>
+    <string name="accessed" msgid="4424701457530587176">"Ultimo accesso: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
