--- a/apk/res/values-ka/strings.xml
+++ b/apk/res/values-ka/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ითხოვს წვდომას <xliff:g id="DATA_TYPES">%2$s</xliff:g>-ზე.\n\nაირჩიეთ ყველას დაშვება ან გააკონტროლეთ ინდივიდუალურად."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"მიეცეს <xliff:g id="APP_NAME">%1$s</xliff:g>-ს <xliff:g id="DATA_TYPE">%2$s</xliff:g>-ზე წვდომის უფლება?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"ფიტნესი და კეთილდღეობა"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"მუდმივად"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"გამოყენებისას"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Მუდმივად"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"გამოყენებისას"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>-ს შეუძლია ფიტნესის და კეთილდღეობის თქვენს ნებისმიერ მონაცემზე წვდომა <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"წვდომა დაშვებულია"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"წაკითხვა დაშვებულია"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"ეს ნებართვები <xliff:g id="APP_NAME">%1$s</xliff:g>-ს აძლევს წვდომას თქვენი მოწყობილობის სენსორების მონაცემებზე."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"გსურთ <xliff:g id="DATA_TYPE">%s</xliff:g>-ზე წვდომის ამოშლა თქვენი საათის ყველა აპისთვის?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"თოლია"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ჯვრის ნიშანი"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"ამჟმად, <xliff:g id="APP_NAME">%1$s</xliff:g>-ს შეუძლია წვდომა ჰქონდეს ფიტნესისა და კეთილდღეობის მონაცემებზე (<xliff:g id="ALLOW_MODE">%2$s</xliff:g>)"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"გსურთ დაუშვათ <xliff:g id="APP_NAME">%1$s</xliff:g>-ის ფიტნესისა და კეთილდღეობის თქვენს მონაცემებზე მუდმივი წვდომა?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g>-ს აქვს წვდომა მონაცემთა შემდეგ ტიპებზე: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ფიტნესისა და კეთილდღეობის ნებართვების მართვა"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{იყენებს 1 აპი}other{იყენებს # აპი}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"არ გამოყენებულა ბოლო 24 საათის განმავლობაში"</string>
+    <string name="accessed" msgid="4424701457530587176">"წვდომა განხორციელდა: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
