--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> កំពុងស្នើសុំសិទ្ធិចូលប្រើ <xliff:g id="DATA_TYPES">%2$s</xliff:g>។\n\nសូមជ្រើសរើសអនុញ្ញាតទាំងអស់ ឬគ្រប់គ្រងការអនុញ្ញាតដាច់ដោយឡែកពីគ្នា។"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើ <xliff:g id="DATA_TYPE">%2$s</xliff:g> ឬ?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"សម្បទា និងសុខុមាលភាព"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"គ្រប់ពេល"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ពេលកំពុងប្រើ"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"គ្រប់ពេល"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ពេលកំពុងប្រើ"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> អាចចូលប្រើទិន្នន័យសម្បទា និងសុខមាលភាពទាំងអស់របស់អ្នក<xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"បានអនុញ្ញាតឱ្យចូលប្រើ"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"បានអនុញ្ញាតឱ្យអាន"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"ការ​អនុញ្ញាតទាំងនេះផ្ដល់សិទ្ធិឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យពីសេនស័រឧបករណ៍របស់អ្នក។"</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ដកសិទ្ធិចូលប្រើ <xliff:g id="DATA_TYPE">%s</xliff:g> សម្រាប់កម្មវិធីទាំងអស់នៅលើនាឡិការបស់អ្នកឬ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"សញ្ញា​ធីក"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"សញ្ញា​ខ្វែង"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"បច្ចុប្បន្ន <xliff:g id="APP_NAME">%1$s</xliff:g> អាចចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាព <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"អនុញ្ញាតឱ្យ <xliff:g id="APP_NAME">%1$s</xliff:g> ចូលប្រើទិន្នន័យសម្បទា និងសុខុមាលភាពគ្រប់ពេលឬ?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> មានសិទ្ធិចូលប្រើ<xliff:g id="DATA_TYPES">%2$s</xliff:g>។"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"គ្រប់គ្រងការអនុញ្ញាតសម្បទា និងសុខុមាលភាព"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{បាន​ប្រើដោយ​កម្មវិធី 1}other{បាន​ប្រើដោយ​កម្មវិធី #}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"មិនបានប្រើក្នុងរយៈពេល 24 ម៉ោងចុងក្រោយ"</string>
+    <string name="accessed" msgid="4424701457530587176">"បានចូលប្រើនៅម៉ោង <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
