--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="DATA_TYPES">%2$s</xliff:g> ಗಳಿಗೆ ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು <xliff:g id="APP_NAME">%1$s</xliff:g> ವಿನಂತಿಸುತ್ತಿದೆ.\n\nಎಲ್ಲವನ್ನೂ ಅನುಮತಿಸಲು ಅಥವಾ ಅವುಗಳನ್ನು ಪ್ರತ್ಯೇಕವಾಗಿ ನಿಯಂತ್ರಿಸಲು ಆಯ್ಕೆಮಾಡಿ."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g> ಅನ್ನು ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲು <xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಅನುಮತಿ ನೀಡಬೇಕೇ?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ಯಾವಾಗಲೂ"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ಬಳಕೆಯಲ್ಲಿರುವಾಗ"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ಯಾವಾಗಲೂ"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ಬಳಕೆಯಲ್ಲಿರುವಾಗ"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ನಿಮ್ಮ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಡೇಟಾವನ್ನು <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದು"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲು ಅನುಮತಿಸಲಾಗಿದೆ"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"ಓದಲು ಅನುಮತಿಸಲಾಗಿದೆ"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"ಈ ಅನುಮತಿಗಳು ನಿಮ್ಮ ಸಾಧನದ ಸೆನ್ಸರ್‌ಗಳಲ್ಲಿನ ಡೇಟಾಗೆ <xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಆ್ಯಕ್ಸೆಸ್ ನೀಡುತ್ತದೆ."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ನಿಮ್ಮ ವಾಚ್‌ನಲ್ಲಿರುವ ಎಲ್ಲಾ ಆ್ಯಪ್‌ಗಳಿಗೆ <xliff:g id="DATA_TYPE">%s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"ಚೆಕ್‌ ಮಾರ್ಕ್"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ಅಡ್ಡ ಗುರುತು"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"ಪ್ರಸ್ತುತ, <xliff:g id="APP_NAME">%1$s</xliff:g> ನಿಮ್ಮ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಡೇಟಾವನ್ನು <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಬಹುದು"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"ಎಲ್ಲಾ ಸಮಯದಲ್ಲೂ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಡೇಟಾಗೆ <xliff:g id="APP_NAME">%1$s</xliff:g> ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ಅನುಮತಿಸಬೇಕೇ?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> ಗೆ ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ಹೊಂದಿದೆ."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಅನುಮತಿಗಳನ್ನು ನಿರ್ವಹಿಸಿ"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{1 ಆ್ಯಪ್ ಬಳಸಿದೆ}one{# ಆ್ಯಪ್‌ಗಳು ಬಳಸಿವೆ}other{# ಆ್ಯಪ್‌ಗಳು ಬಳಸಿವೆ}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"ಕಳೆದ 24 ಗಂಟೆಗಳಲ್ಲಿ ಬಳಸಿಲ್ಲ"</string>
+    <string name="accessed" msgid="4424701457530587176">"<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g> ಸಮಯಕ್ಕೆ ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲಾಗಿದೆ"</string>
 </resources>
