--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -427,7 +427,7 @@
     <string name="no_apps_allowed" msgid="5794833581324128108">"허용된 앱 없음"</string>
     <string name="no_apps_denied" msgid="743327680286446017">"거부된 앱 없음"</string>
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"모든 앱의 액세스 권한을 삭제하시겠습니까?"</string>
-    <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"헬스 커넥트에 액세스하거나 새 데이터를 추가할 수 있는 앱이 없습니다. 기존 데이터는 삭제되지 않습니다.\n\n위치, 카메라, 마이크 등 이 앱에 부여된 다른 권한은 영향을 받지 않습니다."</string>
+    <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"헬스 커넥트에 액세스하거나 새 데이터를 추가할 수 있는 앱이 없게 됩니다. 기존 데이터는 삭제되지 않습니다.\n\n위치, 카메라, 마이크 등 이 앱에 부여된 다른 권한은 영향을 받지 않습니다."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"전체 삭제"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"앱 관리"</string>
     <string name="see_app_data" msgid="3951030076195119476">"앱 데이터 보기"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 <xliff:g id="DATA_TYPES">%2$s</xliff:g>에 대한 액세스 권한을 요청합니다.\n\n모두 허용하도록 선택하거나, 권한을 개별적으로 제어하세요"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> 앱이 <xliff:g id="DATA_TYPE">%2$s</xliff:g>에 액세스하도록 허용하시겠습니까?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"피트니스 및 웰니스"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"항상"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"사용 중일 때"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"항상"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"사용 중일 때"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 <xliff:g id="ALLOW_MODE">%2$s</xliff:g> 모든 피트니스 및 웰니스 데이터에 액세스할 수 있습니다."</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"액세스 허용됨"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"읽기 허용됨"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"이 권한을 통해 <xliff:g id="APP_NAME">%1$s</xliff:g>에서 기기 센서의 데이터에 액세스할 수 있습니다."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"시계의 모든 앱에서 <xliff:g id="DATA_TYPE">%s</xliff:g> 액세스 권한을 삭제하시겠습니까?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"체크표시"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"곱셈 기호"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"현재 <xliff:g id="APP_NAME">%1$s</xliff:g>에서 <xliff:g id="ALLOW_MODE">%2$s</xliff:g> 피트니스 및 웰니스 데이터에 액세스할 수 있습니다."</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 항상 피트니스 및 웰니스 데이터에 액세스하도록 허용하시겠습니까?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g>에서 <xliff:g id="DATA_TYPES">%2$s</xliff:g>에 액세스할 수 있습니다"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"피트니스 및 웰니스 권한 관리"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
