--- a/apk/res/values-ky/strings.xml
+++ b/apk/res/values-ky/strings.xml
@@ -1143,9 +1143,9 @@
     <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Тандалган маалымат биротоло өчүрүлсүнбү?"</string>
     <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Бардык <xliff:g id="APP_NAME">%s</xliff:g> маалыматын биротоло өчүрөсүзбү?"</string>
     <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"Тандалган <xliff:g id="APP_NAME">%s</xliff:g> маалыматы биротоло өчүрүлсүнбү?"</string>
-    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"Тандалган күнү (<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>) киргизилген бардык маалымат биротоло өчүрүлсүнбү?"</string>
-    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"Тандалган апта (<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>) киргизилген бардык маалымат биротоло өчүрүлсүнбү?"</string>
-    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"Тандалган ай (<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>) киргизилген бардык маалымат биротоло өчүрүлсүнбү?"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> күнү киргизилген бардык нерселер биротоло өчүрүлсүнбү?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> аптада киргизилген бардык нерселер биротоло өчүрүлсүнбү?"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> айында киргизилген бардык нерселер биротоло өчүрүлсүнбү?"</string>
     <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"Белгилүү бир күн (<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>) боюнча тандалган маалымат биротоло өчүрүлсүнбү?"</string>
     <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"Белгилүү бир апта (<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>) боюнча тандалган маалымат биротоло өчүрүлсүнбү?"</string>
     <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"Белгилүү бир ай (<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>) боюнча тандалган маалымат биротоло өчүрүлсүнбү?"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> тууралуу маалыматты көрүүгө уруксат сурап жатат.\n\nБаарына уруксат берүү үчүн тандап же ар бирин өзүнчө көзөмөлдөңүз."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPE">%2$s</xliff:g> тууралуу маалыматты көрө берсинби?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Дене бойду чыңдоо жана саламаттык"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ар дайым"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"колдонулганда"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Ар дайым"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Колдонулганда"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна дене бойду чыңдоо жана саламаттыгыңызга байланыштуу нерселердин баары жеткиликтүү болот <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Кирүүгө уруксат берилген"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Окууга уруксат берилген"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Бул уруксаттар <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна түзмөгүңүздүн сенсорлорунан маалыматка кирүү мүмкүнчүлүгүн берет."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Саатыңыздагы бардык колдонмолор үчүн <xliff:g id="DATA_TYPE">%s</xliff:g> кирүү мүмкүнчүлүгү өчүрүлсүнбү?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Белгиленме"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Крест белгиси"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Учурда <xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна дене бойду чыңдоо жана саламаттыкка байланыштуу нерселер жеткиликтүү: <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> колдонмосуна дене бойду чыңдоо жана саламаттык маалыматтарын ар дайым жеткиликтүү кыласызбы?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> төмөнкүнү колдоно алат: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Дене бойду чыңдоо жана саламаттык уруксаттарын тескөө"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
