--- a/apk/res/values-lo/strings.xml
+++ b/apk/res/values-lo/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ກຳລັງຮ້ອງຂໍສິດເຂົ້າເຖິງ <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nເລືອກວ່າຈະອະນຸຍາດທັງໝົດ ຫຼື ຄວບຄຸມເທື່ອລະລາຍການ."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"ອະນຸຍາດໃຫ້ <xliff:g id="APP_NAME">%1$s</xliff:g> ເຂົ້າເຖິງ <xliff:g id="DATA_TYPE">%2$s</xliff:g> ໄດ້ບໍ?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"ການອອກກຳລັງກາຍ ແລະ ສຸຂະພາບ"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ຕະຫຼອດເວລາ"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ໃນລະຫວ່າງທີ່ນຳໃຊ້ຢູ່"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ຕະຫຼອດເວລາ"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ໃນລະຫວ່າງທີ່ນຳໃຊ້ຢູ່"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ສາມາດເຂົ້າເຖິງຂໍ້ມູນການອອກກໍາລັງກາຍ ແລະ ສຸຂະພາບທັງໝົດຂອງທ່ານ <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"ໄດ້ຮັບອະນຸຍາດໃຫ້ເຂົ້າເຖິງ"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"ໄດ້ຮັບອະນຸຍາດໃຫ້ອ່ານ"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"ການອະນຸຍາດເຫຼົ່ານີ້ໃຫ້ <xliff:g id="APP_NAME">%1$s</xliff:g> ເຂົ້າເຖິງຂໍ້ມູນຈາກເຊັນເຊີອຸປະກອນຂອງທ່ານ."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ລຶບສິດເຂົ້າເຖິງ <xliff:g id="DATA_TYPE">%s</xliff:g> ອອກສໍາລັບແອັບທັງໝົດຢູ່ໂມງຂອງທ່ານບໍ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"ໝາຍຖືກ"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ເຄື່ອງໝາຍຂີດຂ້າແບບໄຂວ່ກັນ"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"ປັດຈຸບັນ, <xliff:g id="APP_NAME">%1$s</xliff:g> ສາມາດເຂົ້າເຖິງຂໍ້ມູນການອອກກຳລັງກາຍ ແລະ ສຸຂະພາບ <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"ອະນຸຍາດໃຫ້ <xliff:g id="APP_NAME">%1$s</xliff:g> ເຂົ້າເຖິງຂໍ້ມູນການອອກກຳລັງກາຍ ແລະ ສຸຂະພາບຕະຫຼອດເວລາບໍ?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ມີສິດເຂົ້າເຖິງຂໍ້ມູນ <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ຈັດການສິດດ້ານການອອກກຳລັງກາຍ ແລະ ສຸຂະພາບ"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{ໃຊ້ໂດຍ 1 ແອັບ}other{ໃຊ້ໂດຍ # ແອັບ}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"ບໍ່ໄດ້ໃຊ້ໃນ 24 ຊົ່ວໂມງທີ່ຜ່ານມາ"</string>
+    <string name="accessed" msgid="4424701457530587176">"ເຂົ້າເຖິງເມື່ອ <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
