--- a/apk/res/values-ml/strings.xml
+++ b/apk/res/values-ml/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പ് <xliff:g id="DATA_TYPES">%2$s</xliff:g> എന്നതിലേക്ക് ആക്‌സസ് അഭ്യർത്ഥിക്കുന്നു.\n\nഎല്ലാം അനുവദിക്കാൻ തിരഞ്ഞെടുക്കുകയോ അവ ഓരോന്നും പ്രത്യേകം നിയന്ത്രിക്കുകയോ ചെയ്യുക."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g> ആക്‌സസ് ചെയ്യാൻ <xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിനെ അനുവദിക്കണോ?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"ഫിറ്റ്നസും ശാരീരികക്ഷമതയും"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"എല്ലായ്‌പ്പോഴും"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ഉപയോഗത്തിലുള്ളപ്പോൾ"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"എല്ലായ്‌പ്പോഴും"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ഉപയോഗത്തിലുള്ളപ്പോൾ"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിന് നിങ്ങളുടെ എല്ലാ ഫിറ്റ്നസ്, ശാരീരികക്ഷമതാ ഡാറ്റയും <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ആക്സസ് ചെയ്യാൻ കഴിയും"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"ആക്സസ് ചെയ്യാൻ അനുവദിച്ചു"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"റീഡ് ചെയ്യാനുള്ള അനുവാദം"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"ഈ അനുമതികൾ നിങ്ങളുടെ ഉപകരണ സെൻസറുകളിൽ നിന്നുള്ള ഡാറ്റയിലേക്ക് <xliff:g id="APP_NAME">%1$s</xliff:g> ആപ്പിന് ആക്സസ് നൽകുന്നു."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"നിങ്ങളുടെ വാച്ചിലെ എല്ലാ ആപ്പുകൾക്കുമുള്ള <xliff:g id="DATA_TYPE">%s</xliff:g> ആക്‌സസ് നീക്കം ചെയ്യണോ?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"ചെക്ക് മാർക്ക്"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ക്രോസ് മാർക്ക്"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"നിലവിൽ, <xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിന് ഫിറ്റ്നസ്, വെൽനെസ് ഡാറ്റ <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ആക്സസ് ചെയ്യാനാകും"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"എല്ലായ്‌പ്പോഴും ഫിറ്റ്‌നസ്, വെൽനെസ് ഡാറ്റയിലേക്ക് <xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിന് ആക്‌സസ് അനുവദിക്കണോ?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> എന്നതിന് <xliff:g id="DATA_TYPES">%2$s</xliff:g> എന്നതിലേക്ക് ആക്‌സസ് ഉണ്ട്."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ഫിറ്റ്നസ്, വെൽനെസ് അനുമതികൾ മാനേജ് ചെയ്യുക"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{ഒരു ആപ്പ് ഉപയോഗിച്ചു}other{# ആപ്പുകൾ ഉപയോഗിച്ചു}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"കഴിഞ്ഞ 24 മണിക്കൂറിനിടെ ഉപയോഗിച്ചിട്ടില്ല"</string>
+    <string name="accessed" msgid="4424701457530587176">"<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>-ന് ആക്‌സസ് ചെയ്തു"</string>
 </resources>
