--- a/apk/res/values-mn/strings.xml
+++ b/apk/res/values-mn/strings.xml
@@ -44,7 +44,7 @@
     <string name="set_units_title" msgid="2657822539603758029">"Нэгжүүд тохируулах"</string>
     <string name="manage_data_preferences_category_title" msgid="1183110821140344472">"Сонголт"</string>
     <string name="manage_data_category_title" msgid="6328886061582616519">"Өгөгдлийг удирдах"</string>
-    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Өгөгдлийг экспорт, импорт хийх"</string>
+    <string name="backup_and_restore_settings_summary" msgid="4345972157089493077">"Өгөгдөл экспортлох, импортлох"</string>
     <string name="recent_access_header" msgid="7623497371790225888">"Саяхны хандалт"</string>
     <string name="no_recent_access" msgid="4724297929902441784">"Сүүлийн үед ямар ч апп Health Connect-д хандаагүй байна"</string>
     <string name="show_recent_access_entries_button_title" msgid="3483460066767350419">"Саяхны бүх хандалтыг харах"</string>
@@ -1125,7 +1125,7 @@
     <string name="see_compatible_apps_banner_title" msgid="5217106184748241727">"Тохирох аппуудыг харах"</string>
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect-р <xliff:g id="APP_NAME">%s</xliff:g>-тай синк хийх илүү олон апп олоорой"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"Апп дэлгүүр дээр харах"</string>
-    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Дэлгэцийн түгжээ тохируулна уу"</string>
+    <string name="lock_screen_banner_title" msgid="5384381892985739755">"Дэлгэцийн түгжээ тохируулах"</string>
     <string name="lock_screen_banner_content" msgid="3392527073622152481">"Эрүүл мэндийн өгөгдлийнхөө аюулгүй байдлыг нэмэгдүүлэх үүднээс энэ төхөөрөмжид ПИН, хээ, нууц үг тохируулна уу"</string>
     <string name="lock_screen_banner_button" msgid="2537090011380728122">"Дэлгэцийн түгжээ тохируулах"</string>
     <string name="select_all" msgid="837499881590001166">"Бүгдийг сонгох"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g>-д хандах эрх хүсэж байна.\n\nТэдгээрийг бүгдийг нь зөвшөөрөхөөр сонгох эсвэл тус тусад нь хянана уу."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д <xliff:g id="DATA_TYPE">%2$s</xliff:g>-д хандахыг зөвшөөрөх үү?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес, эрүүл оршихуй"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"үргэлж"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ашиглаж байхад"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Үргэлж"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Ашиглаж байхад"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> таны бүх фитнес, эрүүл оршихуйн өгөгдөлд <xliff:g id="ALLOW_MODE">%2$s</xliff:g> хандах боломжтой"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Хандахыг зөвшөөрсөн"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Уншихыг зөвшөөрсөн"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Эдгээр зөвшөөрөл <xliff:g id="APP_NAME">%1$s</xliff:g>-д таны төхөөрөмжийн мэдрэгчдийн өгөгдөлд хандах эрх өгдөг."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Таны цаган дээрх бүх аппын <xliff:g id="DATA_TYPE">%s</xliff:g>-н хандалтыг хасах уу?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Зөв тэмдэг"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Х тэмдэг"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Одоогоор <xliff:g id="APP_NAME">%1$s</xliff:g> фитнес, эрүүл оршихуйн өгөгдөлд <xliff:g id="ALLOW_MODE">%2$s</xliff:g> хандах боломжтой"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g>-д фитнес, эрүүл оршихуйн өгөгдөлд үргэлж хандахыг зөвшөөрөх үү?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g>-д хандах эрхтэй."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Фитнес, эрүүл оршихуйн зөвшөөрлийг удирдах"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
