--- a/apk/res/values-mr/strings.xml
+++ b/apk/res/values-mr/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ने <xliff:g id="DATA_TYPES">%2$s</xliff:g> अ‍ॅक्सेस करण्याची विनंती केली आहे.\n\nसर्वांना अनुमती देणे किंवा वैयक्तिकरित्या नियंत्रित करणे निवडा."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला <xliff:g id="DATA_TYPE">%2$s</xliff:g> अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"फिटनेस आणि स्वास्थ्य"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"पूर्ण वेळ"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"वापरत असताना"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"पूर्ण वेळ"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"वापरत असताना"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> हे तुमचा फिटनेस आणि स्वास्थ्यासंबंधित सर्व डेटा  <xliff:g id="ALLOW_MODE">%2$s</xliff:g> अ‍ॅक्सेस करू शकते"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"अ‍ॅक्सेस करण्याची अनुमती आहे"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"रीड करण्याची अनुमती आहे"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"या परवानग्या तुमच्या डिव्हाइस सेन्सरमधील <xliff:g id="APP_NAME">%1$s</xliff:g> डेटाचा अ‍ॅक्सेस देतात."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"तुमच्या वॉचवरील सर्व ॲप्सचा <xliff:g id="DATA_TYPE">%s</xliff:g> ॲक्सेस काढून टाकायचा आहे का?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"बरोबरची खूण"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"फुलीची खूण"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"सध्या, <xliff:g id="APP_NAME">%1$s</xliff:g> हे फिटनेस आणि स्वास्थ्यासंबंधित डेटा <xliff:g id="ALLOW_MODE">%2$s</xliff:g> अ‍ॅक्सेस करू शकते"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला नेहमी फिटनेस आणि स्वास्थ्यासंबंधित डेटा अ‍ॅक्सेस करण्याची अनुमती द्यायची आहे का?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ला <xliff:g id="DATA_TYPES">%2$s</xliff:g> चा अ‍ॅक्सेस आहे."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"फिटनेस आणि स्वास्थ्यासंबंधित परवानग्या व्यवस्थापित करा"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{१ अ‍ॅपने वापरल्या}other{# अ‍ॅप्सनी वापरल्या}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"मागील २४ तासांमध्ये न वापरलेली"</string>
+    <string name="accessed" msgid="4424701457530587176">"<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g> वाजता ॲक्सेस केले"</string>
 </resources>
