--- a/apk/res/values-my/strings.xml
+++ b/apk/res/values-my/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် <xliff:g id="DATA_TYPES">%2$s</xliff:g> သုံးခွင့် တောင်းဆိုနေသည်။\n\nအားလုံးခွင့်ပြုရန် (သို့) တစ်ခုချင်းစီ ထိန်းချုပ်ရန် ရွေးပါ။"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> ကို <xliff:g id="DATA_TYPE">%2$s</xliff:g> သုံးခွင့် ပြုမလား။"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"ကျန်းမာကြံ့ခိုင်ရေး"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"အချိန်တိုင်း"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"သုံးနေစဉ်"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"အချိန်တိုင်း"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"သုံးနေစဉ်"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် သင်၏ကျန်းမာကြံ့ခိုင်ရေးဒေတာအားလုံးကို <xliff:g id="ALLOW_MODE">%2$s</xliff:g> သုံးနိုင်သည်"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"သုံးခွင့်ပြုထားသည်များ"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"ဖတ်ခွင့်ပေးထားသည်များ"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"ဤခွင့်ပြုချက်များသည် <xliff:g id="APP_NAME">%1$s</xliff:g> အား သင်၏စက်အာရုံခံကိရိယာများမှ ဒေတာကို သုံးခွင့်ပေးသည်။"</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"သင့်လက်ပတ်နာရီရှိ အက်ပ်အားလုံးအတွက် <xliff:g id="DATA_TYPE">%s</xliff:g> သုံးခွင့် ဖယ်ရှားမလား။"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"အမှန်ခြစ်"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"ကြက်ခြေခတ် အမှတ်အသား"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"လက်ရှိတွင် <xliff:g id="APP_NAME">%1$s</xliff:g> သည် ကျန်းမာကြံ့ခိုင်ရေးဒေတာများ <xliff:g id="ALLOW_MODE">%2$s</xliff:g> သုံးခွင့်ရှိသည်"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> ကို ကျန်းမာကြံ့ခိုင်ရေးဒေတာများ အချိန်တိုင်းသုံးခွင့်ပြုမလား။"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် <xliff:g id="DATA_TYPES">%2$s</xliff:g> တို့သုံးခွင့်ရှိသည်။"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"ကျန်းမာကြံ့ခိုင်ရေးခွင့်ပြုချက်များ စီမံရန်"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
