--- a/apk/res/values-nl/strings.xml
+++ b/apk/res/values-nl/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> vraagt om toegang tot <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nKies of je alles wilt toestaan of ze afzonderlijk wilt beheren."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> toegang geven tot <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness en welzijn"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"altijd"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"tijdens gebruik"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Altijd"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Tijdens gebruik"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> heeft <xliff:g id="ALLOW_MODE">%2$s</xliff:g> toegang tot al je fitness- en welzijnsgegevens"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Toegang toegestaan"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Lezen toegestaan"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Met deze rechten heeft <xliff:g id="APP_NAME">%1$s</xliff:g> toegang tot gegevens van de apparaatsensoren."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"<xliff:g id="DATA_TYPE">%s</xliff:g>-toegang intrekken voor alle apps op je smartwatch?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Vinkje"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Kruis"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Op dit moment heeft <xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="ALLOW_MODE">%2$s</xliff:g> toegang tot fitness- en welzijnsgegevens"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g> altijd toegang geven tot fitness- en welzijnsgegevens?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> heeft toegang tot <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Rechten voor fitness en welzijn beheren"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Gebruikt door 1 app}other{Gebruikt door # apps}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Niet gebruikt in de afgelopen 24 uur"</string>
+    <string name="accessed" msgid="4424701457530587176">"Geopend: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
