--- a/apk/res/values-pt/strings.xml
+++ b/apk/res/values-pt/strings.xml
@@ -428,7 +428,7 @@
     <string name="no_apps_denied" msgid="743327680286446017">"Nenhum app negado"</string>
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"Remover o acesso para todos os apps?"</string>
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Nenhum dos seus apps vai poder acessar ou adicionar novos dados ao app Conexão Saúde. Os dados já existentes não serão excluídos.\n\nIsso não afeta outras permissões que o app possa ter, como de localização, câmera ou microfone."</string>
-    <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Remover tudo"</string>
+    <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Remover para todos"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Gerenciar o app"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Mostrar dados do app"</string>
     <string name="remove_access_for_this_app" msgid="7701101420310711833">"Remover acesso deste app"</string>
@@ -543,8 +543,8 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Acessar a Google Play Store"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Comece a usar o app Conexão Saúde"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"O app Conexão Saúde armazena seus dados de saúde e condicionamento físico, oferecendo uma maneira simples de sincronizar os diferentes apps no dispositivo"</string>
-    <string name="onboarding_description_health_records" msgid="6586657048844511252">"A plataforma Conexão Saúde armazena e sincroniza seus dados de saúde e condicionamento físico de diferentes apps.\n\n"<b>"Dados de condicionamento físico e bem-estar,"</b>" incluindo sessões de exercícios, passos, nutrição, sono e muito mais\n\n"<b>"Históricos de saúde,"</b>" incluindo vacinas, resultados de laboratório e muito mais"</string>
-    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Com o app Conexão Saúde, é possível:"</string>
+    <string name="onboarding_description_health_records" msgid="6586657048844511252">"A plataforma Conexão Saúde armazena e sincroniza seus dados de saúde e condicionamento físico de diferentes apps.\n\n"<b>"Dados de condicionamento físico e bem-estar,"</b>" incluindo sessões de exercícios, passos, nutrição, sono e muito mais\n\n"<b>"Históricos de saúde,"</b>" incluindo vacinas, resultados de laboratório e outros"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"O que você pode fazer com o app Conexão Saúde:"</string>
     <string name="share_data_text" msgid="6898398345784931678"><b>"Compartilhar dados com seus apps"</b>\n"Escolha os dados que cada app pode ler ou gravar na plataforma Conexão Saúde"</string>
     <string name="manage_your_settings_text" msgid="8425779735541136878"><b>"Gerenciar suas configurações e privacidade"</b>\n"Mude as permissões do app e gerencie seus dados a qualquer momento"</string>
     <string name="onboarding_go_back_button_text" msgid="5020083846511184625">"Voltar"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> está pedindo acesso a dados de <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nVocê pode permitir o acesso a todos ou controlar individualmente."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Permitir que o app <xliff:g id="APP_NAME">%1$s</xliff:g> acesse dados de <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness e bem-estar"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"o tempo todo"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"durante o uso"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"O tempo todo"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Durante o uso"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"O app <xliff:g id="APP_NAME">%1$s</xliff:g> pode acessar todos os seus dados de fitness e bem-estar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Com permissão de acesso"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Com permissão de leitura"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Essas permissões dão ao app <xliff:g id="APP_NAME">%1$s</xliff:g> acesso aos dados dos sensores do dispositivo."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Remover o acesso aos dados de <xliff:g id="DATA_TYPE">%s</xliff:g> para todos os apps no seu relógio?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Marca de seleção"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Sinal de X"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"No momento, o app <xliff:g id="APP_NAME">%1$s</xliff:g> pode acessar dados de fitness e bem-estar <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Permitir que o app <xliff:g id="APP_NAME">%1$s</xliff:g> acesse dados de fitness e bem-estar o tempo todo?"</string>
     <string name="current_access" msgid="1457167070428176139">"O app <xliff:g id="APP_NAME">%1$s</xliff:g> tem acesso aos dados de <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Gerenciar permissões de fitness e bem-estar"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Usada por 1 app}one{Usada por # app}other{Usada por # apps}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Permissão não usada nas últimas 24 horas"</string>
+    <string name="accessed" msgid="4424701457530587176">"Último acesso: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
