--- a/apk/res/values-si/strings.xml
+++ b/apk/res/values-si/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> වෙත ප්‍රවේශය.\n\nසියල්ලට ඉඩ දීමට හෝ ඒවා තනි තනිව පාලනය කිරීමට තෝරා ගන්න."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට <xliff:g id="DATA_TYPE">%2$s</xliff:g> වෙත ප්‍රවේශයට ඉඩ දෙන්න ද?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"යෝග්‍යතාවය සහ සුවතාවය"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"සෑම විට ම"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"භාවිත කරන අතරේ"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"සෑම විට ම"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"භාවිත කරන අතරේ"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට ඔබේ සියලුම යෝග්‍යතා සහ සුවතා දත්ත වෙත <xliff:g id="ALLOW_MODE">%2$s</xliff:g> ප්‍රවේශ විය හැක"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"ප්‍රවේශ වීමට අවසර ඇත"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"කියවීමට ඉඩ දී ඇත"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"මෙම අවසර ඔබේ උපාංග සංවේදක වලින් දත්ත වෙත <xliff:g id="APP_NAME">%1$s</xliff:g> ප්‍රවේශය ලබා දෙයි."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"ඔබේ ඔරලෝසුවේ ඇති සියලුම යෙදුම් සඳහා <xliff:g id="DATA_TYPE">%s</xliff:g> ප්‍රවේශය ඉවත් කරන්න ද?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"හරි ලකුණ"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"හරස් ලකුණ"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"දැනට, <xliff:g id="APP_NAME">%1$s</xliff:g> හට යෝග්‍යතා සහ සුවතා දත්ත වෙත ප්‍රවේශ විය හැක <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"සැම විට ම යෝග්‍යතා සහ සුවතා දත්ත වෙත <xliff:g id="APP_NAME">%1$s</xliff:g> හට ප්‍රවේශයට ඉඩ දෙන්න ද?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> හට <xliff:g id="DATA_TYPES">%2$s</xliff:g> වෙත ප්‍රවේශය ඇත."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"යෝග්‍යතා සහ සුවතා අවසර කළමනාකරණය කරන්න"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
