--- a/apk/res/values-sr/strings.xml
+++ b/apk/res/values-sr/strings.xml
@@ -541,7 +541,7 @@
     <string name="export_import_no_apps_text" msgid="6403119325024893690">"Нема доступних апликација. Инсталирајте апликације за простор у клауду да бисте их видели овде"</string>
     <string name="export_import_install_apps_text" msgid="5026922993254770904">"Ако желите додатне опције, инсталирајте апликације за простор у клауду да бисте их видели овде"</string>
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Иди у Play продавницу"</string>
-    <string name="onboarding_title" msgid="8550656211291180188">"Започните са Повезивањем здравља"</string>
+    <string name="onboarding_title" msgid="8550656211291180188">"Започните са Пове­­­U+00ADзивањем здравља"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Повезивање здравља чува ваше податке о здрављу и фитнесу и пружа вам једноставан начин да синхронизујете различите апликације на уређају"</string>
     <string name="onboarding_description_health_records" msgid="6586657048844511252">"Повезивање здравља чува и синхронизује податке о здрављу и фитнесу из различитих апликација.\n\n"<b>"Подаци о фитнесу и здрављу,"</b>" укључујући сесије вежбања, број корака, исхрану, спавање и друго\n\n"<b>"Здравствена евиденција,"</b>" укључујући вакцинације, лабораторијске резултате и друго"</string>
     <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"Помоћу Повезивања здравља:"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> тражи приступ за: <xliff:g id="DATA_TYPES">%2$s</xliff:g>.\n\nИзаберите да ли желите да дозволите све или да их контролишете појединачно."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"Дозвољавате да <xliff:g id="APP_NAME">%1$s</xliff:g> приступа подацима: <xliff:g id="DATA_TYPE">%2$s</xliff:g>?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Фитнес и велнес"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"све време"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"док се користи"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Све време"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Док се користи"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> може да приступа свим подацима о фитнесу и велнесу у режиму <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Дозвољен приступ"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Дозвољено читање"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Ове дозволе дају апликацији <xliff:g id="APP_NAME">%1$s</xliff:g> приступ подацима са сензора уређаја."</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Желите да уклоните приступ подацима (<xliff:g id="DATA_TYPE">%s</xliff:g>) свим апликацијама на сату?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Знак потврде"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Знак x"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"Тренутно, <xliff:g id="APP_NAME">%1$s</xliff:g> може да приступа подацима о фитнесу и велнесу <xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"Желите да дозволите да <xliff:g id="APP_NAME">%1$s</xliff:g> стално приступа подацима о фитнесу и велнесу?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> има приступ за: <xliff:g id="DATA_TYPES">%2$s</xliff:g>."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Управљај дозволама за фитнес и велнес"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{Користи 1 апликација}one{Користи # апликација}few{Користе # апликације}other{Користи # апликација}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"Није коришћено у последња 24 сата"</string>
+    <string name="accessed" msgid="4424701457530587176">"Приступљено: <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
