--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -86,7 +86,7 @@
     <string name="can_read" msgid="4568261079308309564">"<xliff:g id="PERMISSION_TYPE">%s</xliff:g> தரவைப் படிக்கலாம்"</string>
     <string name="can_write" msgid="5082414937218423823">"<xliff:g id="PERMISSION_TYPE">%s</xliff:g> தரவை எழுதலாம்"</string>
     <string name="inactive_apps" msgid="8956546286760797760">"செயலில் இல்லாத ஆப்ஸ்"</string>
-    <string name="inactive_apps_message" msgid="8335803540719022910">"இந்த ஆப்ஸ் இனி <xliff:g id="DATA_TYPE">%s</xliff:g> தரவைப் படிக்கவோ எழுதவோ முடியாது என்றாலும் அவை சேமித்த தரவு இன்னும் Health Connectடில் அப்படியே இருக்கும்"</string>
+    <string name="inactive_apps_message" msgid="8335803540719022910">"இந்த ஆப்ஸால் இனி <xliff:g id="DATA_TYPE">%s</xliff:g> தரவைப் படிக்கவோ எழுதவோ முடியாது என்றாலும் அவை சேமித்த தரவு இன்னும் Health Connectடில் அப்படியே இருக்கும்"</string>
     <string name="data_access_empty_message" msgid="9084350402254264452">"<xliff:g id="DATA_TYPE_0">%1$s</xliff:g> தரவை ஆப்ஸால் இனி படிக்கவோ எழுதவோ முடியாது. Health Connect ஆப்ஸில் <xliff:g id="DATA_TYPE_2">%2$s</xliff:g> தரவு எதுவும் சேமிக்கப்படவில்லை"</string>
     <string name="data_access_exercise_description" msgid="6868583522699443570">"செயல்பாட்டு நேரம், உடற்பயிற்சி வகை, சுற்றுகள், மீண்டும் செய்தல், அமர்வுகள், ஸ்விம்மிங் ஸ்ட்ரோக்குகள் போன்ற தகவல்கள் இந்தத் தரவில் உள்ளடங்கும்"</string>
     <string name="data_access_sleep_description" msgid="74293126050011153">"உறக்க நிலைகள், உறக்கநேர அமர்வுகள் போன்ற தகவல்கள் இந்தத் தரவில் உள்ளடங்கும்"</string>
@@ -142,7 +142,7 @@
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"படிப்பதற்கான அனுமதிகள் <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸுக்கு வழங்கப்படாததால் உடற்பயிற்சித் தரவு எதுவும் தற்போது படிக்கப்படவில்லை"</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"உங்கள் உடல்நலப் பதிவுகள் தொடர்பான முந்தைய தரவை ஏற்கெனவே <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸால் அணுக முடியும். இதை மாற்ற, இந்த ஆப்ஸுக்கான உடல்நலப் பதிவு அனுமதிகளை முடக்குங்கள்."</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"உடல்நலப் பதிவு அனுமதிகளை நிர்வகியுங்கள்"</string>
-    <string name="additional_access_combined_footer" msgid="5967785355544362840">"இந்த ஆப்ஸுக்கான பின்புல அல்லது கடந்தகாலத் தரவு அணுகலை இயக்க, குறைந்தபட்சம் \'படிப்பதற்கான அனுமதி\' ஒன்றை இயக்கவும்"</string>
+    <string name="additional_access_combined_footer" msgid="5967785355544362840">"இந்த ஆப்ஸுக்கான பின்புல அல்லது கடந்தகாலத் தரவு அணுகலை இயக்க, குறைந்தபட்சம் ஒரு \'படிப்பதற்கான அனுமதியை\' இயக்கவும்"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"இந்த ஆப்ஸுக்கான பின்புல அணுகலை இயக்க, குறைந்தபட்சம் \'படிப்பதற்கான அனுமதி\' ஒன்றை இயக்கவும்"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"இந்த ஆப்ஸுக்கான கடந்தகாலத் தரவு அணுகலை இயக்க, குறைந்தபட்சம் \'படிப்பதற்கான அனுமதி\' ஒன்றை இயக்கவும்"</string>
     <string name="historic_access_description" msgid="3309195636349468633">"முந்தைய Health Connect தரவு அனைத்தையும் அணுக இந்த ஆப்ஸை அனுமதிக்கும்"</string>
@@ -323,7 +323,7 @@
     <string name="allergies_intolerances_uppercase_label" msgid="2458552115947636884">"ஒவ்வாமைகள்"</string>
     <string name="allergies_intolerances_lowercase_label" msgid="5066782073511167288">"ஒவ்வாமைகள்"</string>
     <string name="allergies_intolerances_content_description" msgid="7954532940667325068">"ஒவ்வாமைகள் தொடர்பான தரவைப் படிக்கும்"</string>
-    <string name="conditions_uppercase_label" msgid="5260404343402770877">"நிபந்தனைகள்"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"மருத்துவச் சிக்கல்கள்"</string>
     <string name="conditions_lowercase_label" msgid="2678248918552246997">"நிபந்தனைகள்"</string>
     <string name="conditions_content_description" msgid="3230552343616193829">"நிபந்தனைகளை வாசிக்கும்"</string>
     <string name="vaccines_uppercase_label" msgid="1101176371071123187">"தடுப்பூசிகள்"</string>
@@ -1147,7 +1147,7 @@
     <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> வாரத்திற்கான அனைத்துப் பதிவுகளையும் நிரந்தரமாக நீக்கவா?"</string>
     <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>க்கான அனைத்துப் பதிவுகளையும் நிரந்தரமாக நீக்கவா?"</string>
     <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"தேர்ந்தெடுக்கப்பட்ட <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>க்கான பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
-    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"தேர்ந்தெடுக்கப்பட்ட <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> வாரத்திற்கான பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> வாரத்தின் தேர்ந்தெடுக்கப்பட்ட பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
     <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"தேர்ந்தெடுக்கப்பட்ட <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>க்கான பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
     <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"இந்தப் பதிவை நிரந்தரமாக நீக்கவா?"</string>
     <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>க்கான அனைத்து <xliff:g id="APP_NAME">%1$s</xliff:g> பதிவுகளையும் நிரந்தரமாக நீக்கவா?"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="DATA_TYPES">%2$s</xliff:g>க்கான அணுகல் <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸுக்குத் தேவை.\n\nஅனைத்தையும் அனுமதிக்கவோ அவற்றைத் தனித்தனியே கட்டுப்படுத்தவோ தேர்வுசெய்யுங்கள்."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="DATA_TYPE">%2$s</xliff:g> ஐ அணுக <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸை அனுமதிக்கவா?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"உடற்பயிற்சியும் ஆரோக்கியமும்"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"எப்போதும்"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ஆப்ஸைப் பயன்படுத்தும்போது"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"எப்போதும்"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ஆப்ஸைப் பயன்படுத்தும்போது"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸால் உடற்பயிற்சி மற்றும் ஆரோக்கியம் குறித்த அனைத்துத் தரவையும் <xliff:g id="ALLOW_MODE">%2$s</xliff:g> அணுக முடியும்"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"அணுக அனுமதிக்கப்பட்டது"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"படிக்க அனுமதிக்கப்பட்டவை"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"இந்த அனுமதிகள் உங்கள் சாதன சென்சார்களில் இருந்து தரவுக்கான அணுகலை <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸுக்கு வழங்கும்."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"உங்கள் வாட்ச்சில் உள்ள அனைத்து ஆப்ஸுக்கும் <xliff:g id="DATA_TYPE">%s</xliff:g> அணுகலை அகற்றவா?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"தேர்வுக்குறி"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"இல்லை குறி"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"தற்போது, <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸால் உடற்பயிற்சி மற்றும் ஆரோக்கியம் குறித்த தரவை <xliff:g id="ALLOW_MODE">%2$s</xliff:g> அணுக முடியும்"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"உடற்பயிற்சி மற்றும் ஆரோக்கியம் குறித்த தரவை <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸ் எப்போதும் அணுக அனுமதிக்கவா?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸ் <xliff:g id="DATA_TYPES">%2$s</xliff:g>க்கான அணுகலைக் கொண்டுள்ளது."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"உடற்பயிற்சி மற்றும் ஆரோக்கியத்திற்கான அனுமதிகளை நிர்வகியுங்கள்"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
