--- a/apk/res/values-th/strings.xml
+++ b/apk/res/values-th/strings.xml
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g> ขอสิทธิ์เข้าถึง<xliff:g id="DATA_TYPES">%2$s</xliff:g>\n\nเลือกว่าจะอนุญาตทั้งหมดหรือควบคุมทีละรายการ"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"อนุญาตให้ <xliff:g id="APP_NAME">%1$s</xliff:g> เข้าถึง<xliff:g id="DATA_TYPE">%2$s</xliff:g>ไหม"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"การออกกำลังกายและสุขภาวะ"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ตลอดเวลา"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"ขณะใช้งานอยู่"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ตลอดเวลา"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"ขณะใช้งานอยู่"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g> สามารถเข้าถึงข้อมูลการออกกำลังกายและสุขภาวะทั้งหมดของคุณได้<xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"อนุญาตให้เข้าถึง"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"อนุญาตให้อ่าน"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"สิทธิ์เหล่านี้จะให้ <xliff:g id="APP_NAME">%1$s</xliff:g> เข้าถึงข้อมูลจากเซ็นเซอร์ของอุปกรณ์ได้"</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"นําสิทธิ์เข้าถึง<xliff:g id="DATA_TYPE">%s</xliff:g>ออกจากแอปทั้งหมดในนาฬิกาไหม"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"เครื่องหมายถูก"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"เครื่องหมายกากบาท"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"ขณะนี้ <xliff:g id="APP_NAME">%1$s</xliff:g> สามารถเข้าถึงข้อมูลการออกกำลังกายและสุขภาวะ<xliff:g id="ALLOW_MODE">%2$s</xliff:g>"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"อนุญาตให้ <xliff:g id="APP_NAME">%1$s</xliff:g> เข้าถึงข้อมูลการออกกำลังกายและสุขภาวะตลอดเวลาไหม"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> มีสิทธิ์เข้าถึงข้อมูล<xliff:g id="DATA_TYPES">%2$s</xliff:g>"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"จัดการสิทธิ์ด้านการออกกำลังกายและสุขภาวะ"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{ใช้โดยแอป 1 แอป}other{ใช้โดยแอป # แอป}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"ไม่ได้ใช้ใน 24 ชั่วโมงที่ผ่านมา"</string>
+    <string name="accessed" msgid="4424701457530587176">"เข้าถึงเมื่อ <xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g>"</string>
 </resources>
