--- a/apk/res/values-tr/strings.xml
+++ b/apk/res/values-tr/strings.xml
@@ -429,7 +429,7 @@
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"Tüm uygulamalar için erişim kaldırılsın mı?"</string>
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"Uygulamalarınızın hiçbiri Health Connect\'teki verilere erişemez ve Health Connect\'e yeni veri ekleyemez. Bu işlem mevcut verileri silmez.\n\nBu uygulamanın sahip olduğu diğer izinler (ör. konum, kamera, mikrofon) bu durumdan etkilenmez."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Tümünü kaldır"</string>
-    <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Uygulamayı yönetin"</string>
+    <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Uygulama yönetimi"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Uygulama verilerini göster"</string>
     <string name="remove_access_for_this_app" msgid="7701101420310711833">"Bu uygulamanın erişimini kaldır"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"Uygulama verilerini sil"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_TYPES">%2$s</xliff:g> verilerine erişmek istiyor.\n\nTümüne izin vermeyi veya ayrı ayrı kontrol etmeyi seçebilirsiniz."</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"<xliff:g id="APP_NAME">%1$s</xliff:g>, <xliff:g id="DATA_TYPE">%2$s</xliff:g> verilerine erişebilsin mi?"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"Fitness ve sağlıklı yaşam"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"her zaman"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"kullanılırken"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"Her zaman"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"Kullanılırken"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="APP_NAME">%1$s</xliff:g>, fitness ve sağlıklı yaşam verilerinizin tümüne <xliff:g id="ALLOW_MODE">%2$s</xliff:g> erişebilir"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"Erişmesine izin veriliyor"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"Okumasına izin veriliyor"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"Bu izinler <xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasına cihazınızın sensörlerinden gelen verilere erişim yetkisi verir."</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"Kol saatinizdeki tüm uygulamalar için <xliff:g id="DATA_TYPE">%s</xliff:g> erişimi kaldırılsın mı?"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"Onay işareti"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"Çarpı işareti düğmesi"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulaması şu anda fitness ve sağlıklı yaşam verilerine <xliff:g id="ALLOW_MODE">%2$s</xliff:g> erişebilir"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"<xliff:g id="APP_NAME">%1$s</xliff:g>, fitness ve sağlıklı yaşam verilerine her zaman erişebilsin mi?"</string>
     <string name="current_access" msgid="1457167070428176139">"<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> verilerine erişebilir."</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"Fitness ve sağlıklı yaşam izinlerini yönet"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
