--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -583,7 +583,7 @@
     <string name="confirming_question_permission_type_app_data_one_day" msgid="4377296923865256246">"<xliff:g id="APP_DATA">%2$s</xliff:g> کے ذریعے شامل کیا گیا گزشتہ 24 گھنٹوں کا <xliff:g id="DATA_TYPE">%1$s</xliff:g> ڈیٹا مستقل طور پر حذف کریں؟"</string>
     <string name="confirming_question_permission_type_app_data_one_week" msgid="2253468260502709170">"<xliff:g id="APP_DATA">%2$s</xliff:g> کے ذریعے شامل کیا گیا گزشتہ 7 دن کا <xliff:g id="DATA_TYPE">%1$s</xliff:g> ڈیٹا مستقل طور پر حذف کریں؟"</string>
     <string name="confirming_question_permission_type_app_data_one_month" msgid="1656927839079630144">"<xliff:g id="APP_DATA">%2$s</xliff:g> کے ذریعے شامل کیا گیا گزشتہ 30 دن کا <xliff:g id="DATA_TYPE">%1$s</xliff:g> ڈیٹا مستقل طور پر حذف کریں؟"</string>
-    <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"‫Health Connect ایپ سے <xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g> کی تمام اجازتیں بھی ہٹا دیں"</string>
+    <string name="confirming_question_app_remove_all_permissions" msgid="4170343072352701421">"‫‫Health Connect ایپ سے <xliff:g id="APP_WITH_PERMISSIONS">%s</xliff:g> کی تمام اجازتیں بھی ہٹا دیں"</string>
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"<xliff:g id="APP_DATA">%2$s</xliff:g> کے ذریعے شامل کردہ تمام <xliff:g id="DATA_TYPE">%1$s</xliff:g> ڈیٹا کو مستقل طور پر حذف کریں؟"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"اس اندراج کو Health Connect سے مستقل طور پر حذف کریں؟"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"منسلک ایپس Health Connect سے اس ڈیٹا تک مزید رسائی حاصل نہیں کر سکیں گی"</string>
@@ -1171,11 +1171,12 @@
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> <xliff:g id="DATA_TYPES">%2$s</xliff:g> تک رسائی کی درخواست کر رہا ہے۔\n\nسبھی کو اجازت دینے کا انتخاب کریں یا انہیں انفرادی طور پر کنٹرول کریں۔"</string>
     <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> کو <xliff:g id="DATA_TYPE">%2$s</xliff:g> تک رسائی حاصل کرنے کی اجازت دیں؟"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"تندرستی اور بہبود"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"ہر وقت"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"استعمال کے دوران"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"ہر وقت"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"استعمال کے دوران"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> آپ کے سبھی تندرستی اور فلاح و بہبود کے ڈیٹا تک رسائی <xliff:g id="ALLOW_MODE">%2$s</xliff:g> حاصل کر سکتی ہے"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"رسائی حاصل کرنے کی اجازت دی گئی"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"پڑھنے کی اجازت دی گئی"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"یہ اجازتیں آپ کے آلے کے سینسرز سے ڈیٹا تک <xliff:g id="APP_NAME">%1$s</xliff:g> کو رسائی دیتی ہیں۔"</string>
@@ -1187,8 +1188,14 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"اپنی گھڑی پر موجود سبھی ایپس پر <xliff:g id="DATA_TYPE">%s</xliff:g> تک رسائی ہٹائیں؟"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"چیک مارک"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"کراس کا نشان"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"فی الحال، <xliff:g id="APP_NAME">%1$s</xliff:g> تندرستی اور فلاح و بہبود کے ڈیٹا تک <xliff:g id="ALLOW_MODE">%2$s</xliff:g> رسائی حاصل کر سکتی ہے"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> کو تندرستی اور فلاح و بہبود کے ڈیٹا تک ہر وقت رسائی کی اجازت دیں؟"</string>
     <string name="current_access" msgid="1457167070428176139">"‫<xliff:g id="APP_NAME">%1$s</xliff:g> کو <xliff:g id="DATA_TYPES">%2$s</xliff:g> تک رسائی حاصل ہے۔"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"تندرستی اور فلاح و بہبود کی اجازتوں کا نظم کریں"</string>
+    <string name="used_by_apps_count" msgid="1384912521974773617">"{count,plural, =1{‫1 ایپ کے ذریعے استعمال کردہ}other{‫# ایپس کے ذریعے استعمال کردہ}}"</string>
+    <string name="not_used_in_past_24_hours" msgid="7918784815693928054">"گزشتہ 24 گھنٹے میں استعمال نہیں کی گئی"</string>
+    <string name="accessed" msgid="4424701457530587176">"‫<xliff:g id="RECENT_ACCESS_TIME">%1$s</xliff:g> پر رسائی حاصل کی گئی"</string>
 </resources>
