--- a/apk/res/values-zh-rTW/strings.xml
+++ b/apk/res/values-zh-rTW/strings.xml
@@ -104,9 +104,9 @@
     <string name="background_read_single_request_description" msgid="2679634929322639576">"如果允許，這個應用程式就能在你未使用時存取「健康資料同步」的資料。"</string>
     <string name="history_read_single_request_title" msgid="6848027207063414793">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取過去的資料嗎？"</string>
     <string name="history_read_medical_single_request_description" msgid="6408051015819625330">"如果允許，這個應用程式就能存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的健康與健身資料。"</string>
-    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"如果允許，這個應用程式就能存取所有過去的健身與健康資料。"</string>
+    <string name="history_read_medical_single_request_description_fallback" msgid="6685832866184737207">"如果允許，這個應用程式就能存取過去所有的健身與健康資料。"</string>
     <string name="history_read_single_request_description" msgid="9140843675330318112">"如果允許，這個應用程式就能存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入「健康資料同步」的資料。"</string>
-    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"如果允許，這個應用程式就能存取所有過去的「健康資料同步」資料。"</string>
+    <string name="history_read_single_request_description_fallback" msgid="7685531357676523654">"如果允許，這個應用程式就能存取過去所有的「健康資料同步」資料。"</string>
     <string name="additional_permissions_combined_request_title" msgid="5509177449679251301">"要將額外存取權授予「<xliff:g id="APP_NAME">%1$s</xliff:g>」嗎？"</string>
     <string name="additional_permissions_combined_request_description" msgid="7136418603696342323">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」還想存取以下「健康資料同步」設定"</string>
     <string name="background_read_medical_combined_request_title_both_types_granted" msgid="4225111383019900451">"在背景存取所有資料"</string>
@@ -119,10 +119,10 @@
     <string name="background_read_combined_request_description" msgid="2423480522986545286">"允許這個應用程式在你未使用時存取「健康資料同步」的資料"</string>
     <string name="history_read_medical_combined_request_title" msgid="1262267962861942478">"存取過去的健身與健康資料"</string>
     <string name="history_read_medical_combined_request_description" msgid="7550922315652791771">"允許這個應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料"</string>
-    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"允許這個應用程式存取所有過去的資料"</string>
+    <string name="history_read_medical_combined_request_description_fallback" msgid="3567968660826834911">"允許這個應用程式存取過去所有的資料"</string>
     <string name="history_read_combined_request_title" msgid="9023811767370482028">"存取過去的資料"</string>
     <string name="history_read_combined_request_description" msgid="1437787086896636484">"允許這個應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入「健康資料同步」的資料"</string>
-    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"允許這個應用程式存取所有過去的「健康資料同步」資料"</string>
+    <string name="history_read_combined_request_description_fallback" msgid="4974756796396067521">"允許這個應用程式存取過去所有的「健康資料同步」資料"</string>
     <string name="history_read_medical_combined_request_footer" msgid="5301940225768076844">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」現在可以存取過去的健康記錄"</string>
     <string name="history_read_medical_combined_request_footer_link" msgid="355676489585738987">"進一步瞭解權限"</string>
     <string name="background_read_medical_access_title_both_types_granted" msgid="4475972082863444603">"在背景存取所有資料"</string>
@@ -135,17 +135,17 @@
     <string name="background_read_access_description" msgid="2360433029368320323">"允許這個應用程式在你未使用時存取「健康資料同步」的資料"</string>
     <string name="history_read_medical_access_title" msgid="1375462150672418692">"存取過去的健身與健康資料"</string>
     <string name="history_read_medical_access_description" msgid="5615959269427106141">"允許這個應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入的資料"</string>
-    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"允許這個應用程式存取所有過去的資料"</string>
+    <string name="history_read_medical_access_description_fallback" msgid="3888547064992673535">"允許這個應用程式存取過去所有的資料"</string>
     <string name="history_read_access_title" msgid="870048398702887144">"存取過去的資料"</string>
     <string name="history_read_access_description" msgid="800722432229526128">"允許這個應用程式存取 <xliff:g id="DATA_ACCESS_DATE">%1$s</xliff:g>前加入「健康資料同步」的資料"</string>
-    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"允許這個應用程式存取所有過去的「健康資料同步」資料"</string>
+    <string name="history_read_access_description_fallback" msgid="4151538305657852010">"允許這個應用程式存取過去所有的「健康資料同步」資料"</string>
     <string name="history_read_medical_access_read_warning" msgid="8878271647163400440">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」沒有以下項目的讀取權限，因此目前沒有讀取任何健身資料："</string>
     <string name="additional_access_medical_read_footer" msgid="4640796038121080343">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」現在可以存取你過去的健康記錄。如要變更，請關閉應用程式的健康記錄權限"</string>
     <string name="additional_access_medical_read_footer_link" msgid="2797623091827504856">"管理健康記錄權限"</string>
     <string name="additional_access_combined_footer" msgid="5967785355544362840">"你至少要啟用一項讀取的權限，這個應用程式才能存取背景資料或過去的資料"</string>
     <string name="additional_access_background_footer" msgid="1638739578431818525">"你至少要啟用一項讀取的權限，這個應用程式才能存取背景資料"</string>
     <string name="additional_access_history_footer" msgid="5326814559930548467">"你至少要啟用一項讀取的權限，這個應用程式才能存取過去的資料"</string>
-    <string name="historic_access_description" msgid="3309195636349468633">"允許這個應用程式存取所有過去的「健康資料同步」資料"</string>
+    <string name="historic_access_description" msgid="3309195636349468633">"允許這個應用程式存取過去所有的「健康資料同步」資料"</string>
     <string name="background_read_description" msgid="3203594555849969283">"允許這個應用程式在你未使用時，存取「健康資料同步」的資料"</string>
     <string name="active_calories_burned_uppercase_label" msgid="6231684842932528272">"活動卡路里燃燒量"</string>
     <string name="active_calories_burned_lowercase_label" msgid="6743090878253096737">"活動卡路里燃燒量"</string>
@@ -1169,13 +1169,14 @@
     <string name="request_permissions_deny_all" msgid="4123735770293545320">"全部拒絕"</string>
     <string name="wear_allow_app_access_fitness_and_wellness_data" msgid="7914569541993476826">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身與健康資料嗎？"</string>
     <string name="wear_request_multiple_data_type_permissions" msgid="5348997693739610876">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」要求存取<xliff:g id="DATA_TYPES">%2$s</xliff:g>資料。\n\n你可以全部允許，也可以個別授予權限。"</string>
-    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取「<xliff:g id="DATA_TYPE">%2$s</xliff:g>」嗎？"</string>
+    <string name="wear_request_single_data_type_permission" msgid="4479262151480683518">"允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取<xliff:g id="DATA_TYPE">%2$s</xliff:g>？"</string>
     <string name="fitness_and_wellness" msgid="2002316898861559748">"健身與健康"</string>
-    <string name="view_permissions_all_the_time" msgid="6899702815770193290">"一律允許"</string>
-    <string name="view_permissions_while_in_use" msgid="2031627107397429473">"僅在使用時允許"</string>
     <string name="view_permissions_all_the_time_cap" msgid="7703114160274796464">"一律允許"</string>
     <string name="view_permissions_while_in_use_cap" msgid="2567477283044619917">"僅在使用時允許"</string>
-    <string name="view_permissions_mode" msgid="5954826327563393399">"<xliff:g id="ALLOW_MODE">%2$s</xliff:g>「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取你的所有健身與健康資料"</string>
+    <!-- no translation found for view_permissions_description_all_the_time (3434945199164069475) -->
+    <skip />
+    <!-- no translation found for view_permissions_description_while_in_use (507698943902581557) -->
+    <skip />
     <string name="allowed_to_access" msgid="4179317387300812335">"允許存取"</string>
     <string name="allowed_to_read" msgid="2775365229411407406">"允許讀取"</string>
     <string name="give_permission_prompt" msgid="5788144216023065504">"這些權限可讓「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取裝置感應器的資料。"</string>
@@ -1187,8 +1188,17 @@
     <string name="remove_one_permission_for_all" msgid="6732728480265044938">"要移除手錶上所有應用程式的<xliff:g id="DATA_TYPE">%s</xliff:g>存取權嗎？"</string>
     <string name="icon_content_check_mark" msgid="358150681017987426">"勾號"</string>
     <string name="icon_content_cross_mark" msgid="3007762424358780248">"叉號"</string>
-    <string name="current_allow_mode" msgid="6716206063077569218">"目前，<xliff:g id="ALLOW_MODE">%2$s</xliff:g>「<xliff:g id="APP_NAME">%1$s</xliff:g>」存取健身與健康資料"</string>
+    <!-- no translation found for current_allow_mode_all_the_time (3329625277933258855) -->
+    <skip />
+    <!-- no translation found for current_allow_mode_while_in_use (6358053330935305061) -->
+    <skip />
     <string name="allow_all_the_time_prompt" msgid="5625132426961157398">"要允許「<xliff:g id="APP_NAME">%1$s</xliff:g>」隨時存取健身與健康資料嗎？"</string>
     <string name="current_access" msgid="1457167070428176139">"「<xliff:g id="APP_NAME">%1$s</xliff:g>」可以存取<xliff:g id="DATA_TYPES">%2$s</xliff:g>。"</string>
     <string name="manage_fitness_and_wellness_permissions" msgid="6198936108436598267">"管理健身與健康權限"</string>
+    <!-- no translation found for used_by_apps_count (1384912521974773617) -->
+    <skip />
+    <!-- no translation found for not_used_in_past_24_hours (7918784815693928054) -->
+    <skip />
+    <!-- no translation found for accessed (4424701457530587176) -->
+    <skip />
 </resources>
